--- a/backup/frmsettings.lfm
+++ b/backup/frmsettings.lfm
@@ -1,7 +1,7 @@
 object FormSettings: TFormSettings
-  Left = 408
+  Left = 614
   Height = 200
-  Top = 251
+  Top = 259
   Width = 589
   Caption = 'Instellingen'
   ClientHeight = 200
@@ -9,6 +9,7 @@ object FormSettings: TFormSettings
   Color = 12238683
   Font.Height = -13
   Font.Name = 'Segoe UI'
+  OnCreate = FormCreate
   Position = poOwnerFormCenter
   LCLVersion = '2.2.6.0'
   object Label1: TLabel
@@ -32,9 +33,11 @@ object FormSettings: TFormSettings
   end
   object btnTwisterDB: TSpeedButton
     Left = 555
-    Height = 22
+    Height = 25
     Top = 32
     Width = 23
+    Caption = '...'
+    OnClick = btnTwisterDBClick
   end
   object Label2: TLabel
     Left = 160
@@ -44,19 +47,22 @@ object FormSettings: TFormSettings
     Caption = 'Pad naar Template document'
     ParentColor = False
   end
-  object editDBPath1: TEdit
+  object editTemplatePath: TEdit
     Left = 160
     Height = 25
     Top = 80
-    Width = 392
+    Width = 360
+    OnChange = PathChanged
     TabOrder = 1
     TextHint = 'Selecteer pad naar Template.odt'
   end
   object btnTemplate: TSpeedButton
-    Left = 555
-    Height = 22
+    Left = 528
+    Height = 25
     Top = 80
     Width = 23
+    Caption = '...'
+    OnClick = btnTemplateClick
   end
   object Label3: TLabel
     Left = 160
@@ -66,19 +72,22 @@ object FormSettings: TFormSettings
     Caption = 'Bestanden opslaan in'
     ParentColor = False
   end
-  object editDBPath2: TEdit
+  object editNewDocPath: TEdit
     Left = 160
     Height = 25
     Top = 128
     Width = 392
+    OnChange = PathChanged
     TabOrder = 2
     TextHint = 'Selecteer pad waar aangemaakte documenten worden opgeslagen'
   end
   object btnOutputPath: TSpeedButton
     Left = 555
-    Height = 22
+    Height = 25
     Top = 128
     Width = 23
+    Caption = '...'
+    OnClick = btnOutputPathClick
   end
   object btnSave: TButton
     Left = 424
@@ -86,6 +95,7 @@ object FormSettings: TFormSettings
     Top = 160
     Width = 75
     Caption = 'Bewaar'
+    OnClick = btnSaveClick
     TabOrder = 3
   end
   object btnCLoseM: TButton
@@ -325,5 +335,152 @@ object FormSettings: TFormSettings
       E87FF4F90C433A07FBE3ABF785739180A7B870AE3A67FBFFF51FD49F5B560F04
       3E65CA990000000049454E44AE426082
     }
+  end
+  object btnEditTemplate: TSpeedButton
+    Left = 552
+    Height = 24
+    Top = 80
+    Width = 23
+    Glyph.Data = {
+      36100000424D3610000000000000360000002800000020000000200000000100
+      200000000000001000006400000064000000000000000000000000000000A4A4
+      A404A4A4A409A4A4A40FA4A4A415A4A4A41BA4A4A420A4A4A426A4A4A42BA4A4
+      A42FA4A4A433A4A4A436A4A4A43AA4A4A43AA4A4A43BA4A4A43FA4A4A43FA4A4
+      A43BA4A4A43AA4A4A43AA4A4A436A4A4A433A4A4A42FA4A4A42BA4A4A426A4A4
+      A421A4A4A41BA4A4A415A4A4A40FA4A4A409A4A4A40400000000A4A4A411A4A4
+      A45DA4A4A48DA4A4A4A7A4A4A4B9A4A4A4C5A4A4A4CEA4A4A4D5A4A4A4DAA4A4
+      A4DEA4A4A4E2A4A4A4E4A4A4A4E6A4A4A4E7A4A4A4E7A4A4A4E9A4A4A4E9A4A4
+      A4E7A4A4A4E7A4A4A4E6A4A4A4E4A4A4A4E2A4A4A4DFA4A4A4DAA4A4A4D5A4A4
+      A4CEA4A4A4C5A4A4A4B9A4A4A4A8A4A4A48EA4A4A45EA4A4A412A4A4A407A4A4
+      A42CA4A4A448A4A4A45CA4A4A46DAAAAAAA3ABABABB3ABABABBAABABABC0ABAB
+      ABC5ABABABC9ABABABCCABABABCFABABABD0ABABABD0ABABABD0ABABABD0ABAB
+      ABD0ABABABD0ABABABCFABABABCCABABABC9ABABABC5ABABABC0ABABABBAABAB
+      ABB3ABABABA6A4A4A46FA4A4A45CA4A4A448A4A4A42CA4A4A408000000000000
+      000000000000A7A7A701B9B9B976C3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3
+      C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3
+      C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3
+      C3FFC3C3C3FFBCBCBC8FAAAAAA01000000000000000000000000000000000000
+      00000000000000000000C2C2C29FC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3
+      C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3
+      C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3
+      C3FFC3C3C3FFC2C2C2B700000000000000000000000000000000000000000000
+      00000000000000000000C3C3C39FC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3
+      C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3
+      C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3
+      C3FFC3C3C3FFC3C3C3B700000000000000000000000000000000000000000000
+      00000000000000000000C4C4C49FC4C4C4FFC4C4C4FFC8C8C8FFC9C9C9FFC9C9
+      C9FFC9C9C9FFC9C9C9FFC9C9C9FFC9C9C9FFC9C9C9FFC9C9C9FFC9C9C9FFC9C9
+      C9FFC9C9C9FFC4C4C4FFC4C4C4FFC4C4C4FFC4C4C4FFC4C4C4FFC4C4C4FFC4C4
+      C4FFC4C4C4FFC4C4C4B700000000000000000000000000000000000000000000
+      00000000000000000000C7C7C79FC8C8C8FFC8C8C8FFB7B7B7FFB4B4B4FFB4B4
+      B4FFB4B4B4FFB4B4B4FFB4B4B4FFB4B4B4FFB4B4B4FFB4B4B4FFB4B4B4FFB4B4
+      B4FFB4B4B4FF6A6A6AFF636363FFACACACFFC8C8C8FFC8C8C8FFC8C8C8FFC8C8
+      C8FFC8C8C8FFC8C8C8B700000000000000000000000000000000000000000000
+      00000000000000000000CACACA9FCBCBCBFFCBCBCBFFCBCBCBFFCBCBCBFFCBCB
+      CBFFCBCBCBFFCBCBCBFFCBCBCBFFCBCBCBFFCBCBCBFFCBCBCBFFCBCBCBFFCBCB
+      CBFFCBCBCBFF818181FF171717FF60727AFFC6DEE7FFCBD1D4FFCBCBCBFFCBCB
+      CBFFCBCBCBFFCACACAB700000000000000000000000000000000000000000000
+      00000000000000000000CDCDCD9FCDCDCDFFCDCDCDFFCDCDCDFFCDCDCDFFCDCD
+      CDFFCDCDCDFFCDCDCDFFCDCDCDFFCDCDCDFFCDCDCDFFCDCDCDFFCDCDCDFFCDCD
+      CDFFCDCDCDFFAAB0B3FF7EA0B3FFB2DDF2FFBDE3F3FFC9E9F5FFB0D9E8FFC8CC
+      CEFFCDCDCDFFCDCDCDB700000000000000000000000000000000000000000000
+      00000000000000000000D0D0D09FD0D0D0FFD0D0D0FFD0D0D0FFD0D0D0FFD0D0
+      D0FFD0D0D0FFD0D0D0FFD0D0D0FFD0D0D0FFD0D0D0FFD0D0D0FFD0D0D0FFD0D0
+      D0FFD0D0D0FFCAD0D3FF9FD3EFFFAAD9F1FFB5DFF2FF95D6F3FF51BFF0FF70C0
+      E1FFD0D0D0FFD0D0D0B700000000000000000000000000000000000000000000
+      00000000000000000000D2D2D29FD2D2D2FFD2D2D2FFCDCDCDFFCCCCCCFFCCCC
+      CCFFCCCCCCFFCCCCCCFFCCCCCCFFCCCCCCFFCCCCCCFFCCCCCCFFCCCCCCFFCCCC
+      CCFFCCCCCCFFCCCCCCFF9ACEECFF9DD3F0FF7DCCF3FF49BCEFFF5AC2F2FF3FB9
+      EDFF91C6DBFFD0D2D2B700000000000000000000000000000000000000000000
+      00000000000000000000D4D4D49FD5D5D5FFD5D5D5FFC7C7C7FFC5C5C5FFC5C5
+      C5FFC5C5C5FFC5C5C5FFC5C5C5FFC5C5C5FFC5C5C5FFC5C5C5FFC5C5C5FFC5C5
+      C5FFC5C5C5FFC5C5C5FF92C8E5FF38B7EAFF56C1F1FF4FBEF0FF40BAEDFF4DBE
+      EFFF36B6EAFFA0CADAB700000000000000000000000000000000000000000000
+      00000000000000000000D7D7D79FD7D7D7FFD7D7D7FFD7D7D7FFD7D7D7FFD7D7
+      D7FFD7D7D7FFD7D7D7FFD7D7D7FFD7D7D7FFD7D7D7FFD7D7D7FFD7D7D7FFD7D7
+      D7FFD7D7D7FFD7D7D7FFBDD3DEFF52BFEFFF2AB3E9FF54C0F1FF35B7EBFF3DB9
+      EDFF3EB9EDFF2AB3E7E02FB3E40F000000000000000000000000000000000000
+      00000000000000000000D9D9D99FD9D9D9FFD9D9D9FFD9D9D9FFD9D9D9FFD9D9
+      D9FFD9D9D9FFD9D9D9FFD9D9D9FFD9D9D9FFD9D9D9FFD9D9D9FFD9D9D9FFD9D9
+      D9FFD9D9D9FFD9D9D9FFD9D9D9FFA7D1E5FF4ABDEFFF2FB5EAFF46BBEEFF1FB0
+      E8FF3EB9EDFF2EB4EAFF16ADE6AE000000000000000000000000000000000000
+      00000000000000000000DBDBDB9FDBDBDBFFDBDBDBFFDFDFDFFFDFDFDFFFDFDF
+      DFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDF
+      DFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFF90D0EFFF45BBEEFF34B6EBFF2EB4
+      EAFF18AEE6FF38B7ECFF1FB0E8FF14ACE4730000000000000000000000000000
+      00000000000000000000DDDDDD9FDEDEDEFFDEDEDEFFC7C7C7FFC3C3C3FFC3C3
+      C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3
+      C3FFC3C3C3FFC3C3C3FFC3C3C3FFC3C3C3FFBFC4C6FF75C6EDFF3FB9EDFF31B5
+      EBFF18AEE6FF1DAFE7FF2DB4EAFF4FB4DAFAA4B9CA4E00000000000000000000
+      00000000000000000000DFDFDF9FDFDFDFFFDFDFDFFFD9D9D9FFD7D7D7FFD7D7
+      D7FFD7D7D7FFD7D7D7FFD7D7D7FFD7D7D7FFD7D7D7FFD7D7D7FFD7D7D7FFD7D7
+      D7FFD7D7D7FFD7D7D7FFD7D7D7FFD7D7D7FFD7D7D7FFC8D7DFFF6BC6F3FF3BB8
+      ECFF24B1E8FF13ACE5FF8DCAE1FFBCBDD0FF3939A1E321219E14000000000000
+      00000000000000000000E1E1E19FE1E1E1FFE1E1E1FFE1E1E1FFE1E1E1FFE1E1
+      E1FFE1E1E1FFE1E1E1FFE1E1E1FFE1E1E1FFE1E1E1FFE1E1E1FFE1E1E1FFE1E1
+      E1FFE1E1E1FFE1E1E1FFE1E1E1FFE1E1E1FFE1E1E1FFE1E1E1FFBBD9EAFF62C4
+      F3FF4ABBEAFFB7D7E4FF9F9FCAFF1C1C99FF12129CFF1515A495000000000000
+      00000000000000000000E3E3E39FE3E3E3FFE3E3E3FFE3E3E3FFE3E3E3FFE3E3
+      E3FFE3E3E3FFE3E3E3FFE3E3E3FFE3E3E3FFE3E3E3FFE3E3E3FFE3E3E3FFE3E3
+      E3FFE3E3E3FFE3E3E3FFE3E3E3FFE3E3E3FFE3E3E3FFE3E3E3FFE3E3E3FFB0D3
+      E6FFC1C9CFFF6666AFFF111197FF13139EFF1C1CAEED1E1EB242000000000000
+      00000000000000000000E4E4E49FE4E4E4FFE4E4E4FFDFDFDFFFDDDDDDFFDDDD
+      DDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDD
+      DDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDEDEDEFFE2E2
+      E2FF6060B3FF121299FF1414A1FF2121B4CA2222B72000000000000000000000
+      00000000000000000000E6E6E69FE6E6E6FFE6E6E6FFD0D0D0FFCCCCCCFFCCCC
+      CCFFCCCCCCFFCCCCCCFFCCCCCCFFCCCCCCFFCCCCCCFFCCCCCCFFCCCCCCFFCCCC
+      CCFFCCCCCCFFCCCCCCFFCCCCCCFFCCCCCCFFCCCCCCFFCCCCCCFFCFCFCFFFE6E6
+      E6FFC9C9DFFF3232B6FB2727B8952222B7060000000000000000000000000000
+      00000000000000000000E7E7E79FE7E7E7FFE7E7E7FFE7E7E7FFE7E7E7FFE7E7
+      E7FFE7E7E7FFE7E7E7FFE7E7E7FFE7E7E7FFE7E7E7FFE7E7E7FFE7E7E7FFE7E7
+      E7FFE7E7E7FFE7E7E7FFE7E7E7FFE7E7E7FFE7E7E7FFE7E7E7FFE7E7E7FFE7E7
+      E7FFE7E7E7FFD8D8E3B700000000000000000000000000000000000000000000
+      00000000000000000000E8E8E89FE9E9E9FFE9E9E9FFE9E9E9FFE9E9E9FFE9E9
+      E9FFE9E9E9FFE9E9E9FFE9E9E9FFE9E9E9FFE9E9E9FFE9E9E9FFE9E9E9FFE9E9
+      E9FFE9E9E9FFE9E9E9FFE9E9E9FFE9E9E9FFE9E9E9FFE9E9E9FFE9E9E9FFE9E9
+      E9FFE9E9E9FFE8E8E8B700000000000000000000000000000000000000000000
+      00000000000000000000EAEAEA9FEAEAEAFFEAEAEAFFEAEAEAFFEBEBEBFFEBEB
+      EBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEB
+      EBFFEBEBEBFFEAEAEAFFEAEAEAFFEAEAEAFFEAEAEAFFEAEAEAFFEAEAEAFFEAEA
+      EAFFEAEAEAFFEAEAEAB700000000000000000000000000000000000000000000
+      00000000000000000000EAEAEA9FEBEBEBFFEBEBEBFFD7D7D7FFD4D4D4FFD4D4
+      D4FFD4D4D4FFD4D4D4FFD4D4D4FFD4D4D4FFD4D4D4FFD4D4D4FFD4D4D4FFD4D4
+      D4FFD4D4D4FFD4D4D4FFE9E9E9FFEBEBEBFFEBEBEBFFEBEBEBFFEBEBEBFFEBEB
+      EBFFEBEBEBFFE7E7E7B700000000000000000000000000000000000000000000
+      00000000000000000000EBEBEB9FECECECFFECECECFFDFDFDFFFDDDDDDFFDDDD
+      DDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDDDDFFDDDD
+      DDFFDDDDDDFFDDDDDDFFEAEAEAFFECECECFFB4B4B4FF848484FF838383FF8181
+      81FF7E7E7EFB9D9D9D5600000000000000000000000000000000000000000000
+      00000000000000000000ECECEC9FECECECFFECECECFFECECECFFECECECFFECEC
+      ECFFECECECFFECECECFFECECECFFECECECFFECECECFFECECECFFECECECFFECEC
+      ECFFECECECFFECECECFFECECECFFECECECFF8B8B8BFF777777FF707070FF6868
+      68FB666666570000000000000000000000000000000000000000000000000000
+      00000000000000000000ECECEC9FEDEDEDFFEDEDEDFFEDEDEDFFEDEDEDFFEDED
+      EDFFEDEDEDFFEDEDEDFFEDEDEDFFEDEDEDFFEDEDEDFFEDEDEDFFEDEDEDFFEDED
+      EDFFEDEDEDFFEDEDEDFFEDEDEDFFEDEDEDFF808080FF696969FF606060FB5D5D
+      5D57000000000000000000000000000000000000000000000000000000000000
+      00000000000000000000EDEDED9FEDEDEDFFEDEDEDFFEDEDEDFFEDEDEDFFEDED
+      EDFFEDEDEDFFEDEDEDFFEDEDEDFFEDEDEDFFEDEDEDFFEDEDEDFFEDEDEDFFEDED
+      EDFFEDEDEDFFEDEDEDFFEDEDEDFFEDEDEDFF727272FF565656FB535353570000
+      0000000000000000000000000000000000000000000000000000000000000000
+      00000000000000000000EDEDED95EFEFEFFFEFEFEFFFEFEFEFFFEFEFEFFFEFEF
+      EFFFEFEFEFFFEFEFEFFFEFEFEFFFEFEFEFFFEFEFEFFFEFEFEFFFEFEFEFFFEFEF
+      EFFFEFEFEFFFEFEFEFFFEFEFEFFFEFEFEFFF606060FB4A4A4A57000000000000
+      0000000000000000000000000000000000000000000000000000000000000000
+      00000000000000000000EDEDED1EEDEDED95EDEDED9FEDEDED9FEDEDED9FEDED
+      ED9FEDEDED9FEDEDED9FEDEDED9FEDEDED9FEDEDED9FEDEDED9FEDEDED9FEDED
+      ED9FEDEDED9FEDEDED9FEDEDED9FE3E3E39F7D7D7D5700000000000000000000
+      0000000000000000000000000000000000000000000000000000
+    }
+    OnClick = btnEditTemplateClick
+  end
+  object SelFile: TOpenDialog
+    Left = 32
+    Top = 144
+  end
+  object SelDir: TSelectDirectoryDialog
+    Left = 80
+    Top = 144
   end
 end
