--- a/lib/x86_64-win64/frmmain.lfm
+++ b/lib/x86_64-win64/frmmain.lfm
@@ -25,7 +25,7 @@ object mainForm: TmainForm
     Width = 144
     Caption = 'Brief Aanmaken'
     OnClick = btnGenerateDocumentClick
-    TabOrder = 0
+    TabOrder = 8
   end
   object cmbSenders: TComboBox
     Left = 184
@@ -115,12 +115,13 @@ object mainForm: TmainForm
       'Mevrouw,'
       'Mijnheer,'
     )
+    OnClick = groupSalutationClick
     ParentBackground = False
     ParentFont = False
     ParentColor = False
     ParentShowHint = False
     ShowHint = True
-    TabOrder = 3
+    TabOrder = 5
   end
   object groupSignature: TRadioGroup
     Left = 186
@@ -148,9 +149,10 @@ object mainForm: TmainForm
       'Met achting,'
       'Hoogachtend,'
     )
+    OnClick = groupSignatureClick
     ParentShowHint = False
     ShowHint = True
-    TabOrder = 4
+    TabOrder = 6
   end
   object Button1: TButton
     Left = 480
@@ -160,7 +162,7 @@ object mainForm: TmainForm
     Cancel = True
     Caption = 'Sluit'
     OnClick = Button1Click
-    TabOrder = 5
+    TabOrder = 9
   end
   object Label4: TLabel
     Left = 186
@@ -178,7 +180,7 @@ object mainForm: TmainForm
     Width = 367
     ParentShowHint = False
     ShowHint = True
-    TabOrder = 6
+    TabOrder = 4
     TextHint = 'Geef hier het onderwerp van de brief'
   end
   object Image1: TImage
@@ -45150,7 +45152,7 @@ object mainForm: TmainForm
     BorderSpacing.Bottom = 10
     BorderSpacing.Around = 10
     ScrollBars = ssAutoBoth
-    TabOrder = 8
+    TabOrder = 3
   end
   object cbSocialSecurityInclude: TCheckBox
     Left = 193
@@ -45162,7 +45164,7 @@ object mainForm: TmainForm
     OnChange = cbSocialSecurityIncludeChange
     ParentShowHint = False
     ShowHint = True
-    TabOrder = 9
+    TabOrder = 7
   end
   object btnSettings: TBitBtn
     Left = 16
@@ -45303,7 +45305,7 @@ object mainForm: TmainForm
       B20900000000A4A1A0C08F8D8C74000000000000000000000000
     }
     OnClick = btnSettingsClick
-    TabOrder = 10
+    TabOrder = 11
   end
   object Label6: TLabel
     Left = 184
@@ -45318,7 +45320,7 @@ object mainForm: TmainForm
     Height = 25
     Top = 67
     Width = 365
-    TabOrder = 11
+    TabOrder = 0
     TextHint = 'Geef een betekenisvolle naam voor de brief'
   end
   object SQLConnection: TSQLite3Connection
